fix: fix @heyform/ui modal z-index error

--- a/dashboard/src/components/planModal/index.scss
+++ b/dashboard/src/components/planModal/index.scss
@@ -1,9 +1,4 @@
 .plan-modal {
-  .modal-mask,
-  .modal-container {
-    @apply z-50;
-  }
-
   .modal-container {
     @apply p-0;
   }
